[fix] resetcssのtext-alignを削除
CSSの読み込みタイミングを変えたり試しても何故かこっちのtext-alignが適用されてしまうので削除で対処

--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -13,7 +13,6 @@ body, h1, h2, h3, h4, h5, h6, p, address, ul, ol, li, dl, dt, dd, table, caption
 	font-style: normal;
 	font-weight: normal;
 	font-size: 100%;
-	text-align: left;
 	list-style-type: none;
 }
 
